--- a/credit_scoring/credit_scoring.ipynb
+++ b/credit_scoring/credit_scoring.ipynb
@@ -1,1 +1,18 @@
-
+{
+  "nbformat_minor": 1,
+  "nbformat": 4,
+  "cells": [
+    {
+      "source": [
+        "# Этап 1. Получение данных"
+      ],
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "5UYxO1GdF6Wy",
+        "deletable": false,
+        "tags": [
+          "f6c88c58-a82b-4f28-8bd6-fd55c0017917"
+        ]
+      }
+    }
