--- a/credit_scoring/credit_scoring.ipynb
+++ b/credit_scoring/credit_scoring.ipynb
@@ -1328,6 +1328,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_173/3281638371.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  clients['purpose_lemmas'] = clients['purpose'].apply(purpose_lemm) # создаём столбец purpose_lemmas и присваеваем категории\n"
+     ]
+    }
+   ],
+   "source": [
+    "def purpose_lemm (row_values): # создаём функцию\n",
+    "    row_lemmas = m.lemmatize(row_values) # лемматизируем row_values\n",
+    "    if 'жилье' in row_lemmas:\n",
+    "        return 'недвижимость'\n",
+    "    if 'недвижимость' in row_lemmas:\n",
+    "        return 'недвижимость'\n",
+    "    if 'автомобиль' in row_lemmas:\n",
+    "        return 'автомобиль'\n",
+    "    if 'образование' in row_lemmas:\n",
+    "        return 'образование'\n",
+    "    if 'свадьба' in row_lemmas:\n",
+    "        return 'свадьба'\n",
+    "    return 'прочее'\n",
+    "\n",
+    "clients['purpose_lemmas'] = clients['purpose'].apply(purpose_lemm) # создаём столбец purpose_lemmas и присваеваем категории "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
@@ -1654,7 +1690,14 @@
     {
      "name": "stderr",
      "output_type": "stream",
-
+     "text": [
+      "/tmp/ipykernel_173/3535519125.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  clients['class_income'] = clients['total_income'].apply(cat_group) # создаём столбец class_income и присваеваем категории\n"
+     ]
     }
    ],
    "source": [
