--- a/telecom/telecom.ipynb
+++ b/telecom/telecom.ipynb
@@ -1967,7 +1967,30 @@
    "execution_count": 7,
    "metadata": {},
    "outputs": [
-    
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_252/1954623509.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  calls['duration'] = np.ceil(calls['duration']) # округляем в болбшую сторону столбец duration\n",
+      "/tmp/ipykernel_252/1954623509.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  calls['call_date'] = pd.to_datetime(calls['call_date'], format='%Y-%m-%d') # преобразуем столбец call_date в datetime64\n",
+      "/tmp/ipykernel_252/1954623509.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  calls['month'] = calls['call_date'].dt.month_name() # создатём столбец month\n"
+     ]
+    }
    ],
    "source": [
     "calls['duration'] = np.ceil(calls['duration']) # округляем в болбшую сторону столбец duration\n",
@@ -3447,21 +3470,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "<hr style=\"border: 2px solid green;\" />\n",
-    "\n",
-    "## Шаг 6. Общий комментарий\n",
-    "Спасибо за проделанную работу🤝\n",
-    "\n",
-    "Иван, проект выполнен достаточно хорошо, но ошибка при подготовке таблицы для основного анализа могла помешать корректным выводам. Найденные ошибки:\n",
-    "- изучить записи с нулевой длительностью или нулевым траффиком\n",
-    "- проверить корректность сборки общей таблицы\n",
-    "- по необходимости скорректировать выводы\n",
-    "\n",
-    "Исправляй и отправляй на проверку🛠"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -19549,4 +19562,3 @@
  "nbformat": 4,
  "nbformat_minor": 2
 }
-
