--- a/games/games.ipynb
+++ b/games/games.ipynb
@@ -8563,6 +8563,166 @@
    {
     "duration": 11,
     "start_time": "2022-03-26T16:39:04.691Z"
+   },
+   {
+    "duration": 1155,
+    "start_time": "2022-03-26T16:41:00.690Z"
+   },
+   {
+    "duration": 45,
+    "start_time": "2022-03-26T16:41:01.848Z"
+   },
+   {
+    "duration": 6,
+    "start_time": "2022-03-26T16:41:01.895Z"
+   },
+   {
+    "duration": 118,
+    "start_time": "2022-03-26T16:41:01.903Z"
+   },
+   {
+    "duration": 13,
+    "start_time": "2022-03-26T16:41:02.023Z"
+   },
+   {
+    "duration": 27,
+    "start_time": "2022-03-26T16:41:02.037Z"
+   },
+   {
+    "duration": 14,
+    "start_time": "2022-03-26T16:41:02.066Z"
+   },
+   {
+    "duration": 9,
+    "start_time": "2022-03-26T16:41:02.082Z"
+   },
+   {
+    "duration": 16,
+    "start_time": "2022-03-26T16:41:02.092Z"
+   },
+   {
+    "duration": 15,
+    "start_time": "2022-03-26T16:41:02.111Z"
+   },
+   {
+    "duration": 7,
+    "start_time": "2022-03-26T16:41:02.128Z"
+   },
+   {
+    "duration": 10,
+    "start_time": "2022-03-26T16:41:02.136Z"
+   },
+   {
+    "duration": 15,
+    "start_time": "2022-03-26T16:41:02.148Z"
+   },
+   {
+    "duration": 6,
+    "start_time": "2022-03-26T16:41:02.164Z"
+   },
+   {
+    "duration": 195,
+    "start_time": "2022-03-26T16:41:02.172Z"
+   },
+   {
+    "duration": 132,
+    "start_time": "2022-03-26T16:41:02.369Z"
+   },
+   {
+    "duration": 312,
+    "start_time": "2022-03-26T16:41:02.502Z"
+   },
+   {
+    "duration": 8,
+    "start_time": "2022-03-26T16:41:02.815Z"
+   },
+   {
+    "duration": 28,
+    "start_time": "2022-03-26T16:41:02.825Z"
+   },
+   {
+    "duration": 244,
+    "start_time": "2022-03-26T16:41:02.855Z"
+   },
+   {
+    "duration": 39,
+    "start_time": "2022-03-26T16:41:03.101Z"
+   },
+   {
+    "duration": 7,
+    "start_time": "2022-03-26T16:41:03.142Z"
+   },
+   {
+    "duration": 9,
+    "start_time": "2022-03-26T16:41:03.151Z"
+   },
+   {
+    "duration": 392,
+    "start_time": "2022-03-26T16:41:03.161Z"
+   },
+   {
+    "duration": 407,
+    "start_time": "2022-03-26T16:41:03.563Z"
+   },
+   {
+    "duration": 371,
+    "start_time": "2022-03-26T16:41:03.972Z"
+   },
+   {
+    "duration": 78,
+    "start_time": "2022-03-26T16:41:04.345Z"
+   },
+   {
+    "duration": 174,
+    "start_time": "2022-03-26T16:41:04.426Z"
+   },
+   {
+    "duration": 176,
+    "start_time": "2022-03-26T16:41:04.601Z"
+   },
+   {
+    "duration": 12,
+    "start_time": "2022-03-26T16:41:04.779Z"
+   },
+   {
+    "duration": 25,
+    "start_time": "2022-03-26T16:41:04.792Z"
+   },
+   {
+    "duration": 20,
+    "start_time": "2022-03-26T16:41:04.819Z"
+   },
+   {
+    "duration": 22,
+    "start_time": "2022-03-26T16:41:04.840Z"
+   },
+   {
+    "duration": 21,
+    "start_time": "2022-03-26T16:41:04.863Z"
+   },
+   {
+    "duration": 27,
+    "start_time": "2022-03-26T16:41:04.886Z"
+   },
+   {
+    "duration": 16,
+    "start_time": "2022-03-26T16:41:04.915Z"
+   },
+   {
+    "duration": 21,
+    "start_time": "2022-03-26T16:41:04.933Z"
+   },
+   {
+    "duration": 26,
+    "start_time": "2022-03-26T16:41:04.955Z"
+   },
+   {
+    "duration": 20,
+    "start_time": "2022-03-26T16:41:04.983Z"
+   },
+   {
+    "duration": 33,
+    "start_time": "2022-03-26T16:41:05.005Z"
    }
   ],
   "kernelspec": {
@@ -8599,4 +8759,3 @@
  "nbformat": 4,
  "nbformat_minor": 2
 }
-
